--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "laravel/lumen-framework": "5.1.*",
         "vlucas/phpdotenv": "~1.0",
-        "illuminate/redis": "^5.1"
+        "illuminate/redis": "5.1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
